logica casi lista pero tengo problemas con lineas muy largas y las flags #, espacio y +

--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -18,6 +18,7 @@ SRCS =	srcs/ft_printf.c \
 		srcs/ft_flag_bonus.c \
 		srcs/ft_skipping.c \
 		srcs/ft_datatype.c \
+		srcs/ft_signalflag_bonus.c \
 		srcs/ft_manager.c \
 		srcs/ft_width_bonus.c \
 		srcs/ft_precision_bonus.c \
